vertical-align bug fixed

--- a/section01/main.css
+++ b/section01/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Open Sans Condensed', sans-serif;
     margin: 0;
@@ -5,8 +9,11 @@ body {
 
 #product-overview {
     background: red;
-    width: 50%;
-    height: 500px;
+    width: 100%;
+    height: 300px;
+    padding: 10px;
+    border: 5px solid black;
+    margin: 10px;
 }
 
 #product-overview h1 {
@@ -23,3 +30,63 @@ h1 {
     /*font-family: 'Rowdies', cursive;*/
 }
 
+
+.main-header {
+    width: 100%;
+    background: greenyellow;
+    padding: 10px;
+}
+
+.main-header > div {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main-header__brand {
+    color: darkgreen;
+    text-decoration: none;      /* turn off default decoration */
+    font-size: 22px;
+    font-weight: bold;
+}
+
+
+.main-nav {
+    text-align: right;
+    display: inline-block;
+    width: calc(100% - 54px);
+    vert-align: middle;
+}
+
+.nav-items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.nav-item {
+    display: inline-block;
+}
+
+
+
+
+/*
+
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.main-nav__item {
+    display: inline-block;
+    margin: 0 16px;
+}
+
+.main-nav__item a {
+    text-decoration: none;
+    color: #0e4f1f;
+}
+
+ */
